fixed issue with first button not showing

--- a/src/pages/game.css
+++ b/src/pages/game.css
@@ -13,7 +13,7 @@ body {
 
 .container {
   display: block;
-  width: 50%;
+  width: 80%;
   margin: auto;
 }
 
@@ -62,6 +62,7 @@ body {
 .start-button
 {
   padding: 2%;
+  margin-top: 5%;
   border: 5px, solid;
   border-radius: 10%;
   background: none;
